# spinq-vqe

./: .gitattributes  .gitignore  OVERVIEW.md  README.md  REFERENCES.md  pyproject.toml
data/: ed_reference_energies.csv  qaoa_results.csv  vqe_results.csv  vqe_scaling.csv
docs/: README.md  ansatze.md  api.md  notebooks.md  physics.md
notebooks/: 01_kagome_hamiltonian.ipynb  02_vqe_run.ipynb  03_entanglement.ipynb  04_soc_qaoa.ipynb  05_scaling_analysis.ipynb
src/spinq_vqe/: __init__.py  ansatz.py  entanglement.py  kagome.py  qaoa.py  surrogate.py  utils.py  vqe.py
